[fix] - improved layout on small screens

--- a/src/app/shared/scss/card.scss
+++ b/src/app/shared/scss/card.scss
@@ -26,9 +26,5 @@
     .card {
         display: grid;
         justify-content: center;
-
-        .card__wrapper {
-            width: 200px;
-        }
     }
 }
