--- a/src/app/shared/scss/dashboard.scss
+++ b/src/app/shared/scss/dashboard.scss
@@ -20,13 +20,4 @@
         margin: 320px 0px;
         padding-top: 45px;
     }
-    .form__actions {
-        display: flex;
-        flex-direction: column;
-        margin: 10px;
-    }
-    .form__body .form__field {
-        display: flex;
-        justify-content: center;
-    }
 }
